--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
   <body>
     <header>
@@ -28,7 +29,21 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+      <div class="container-fluid py-5 green_bg text-center ">
+          <div class="row d-flex ">
+              <div class="col">
+                  <img class="avatar" src="./img/avatar.svg" alt="">
+                  <h1 class="fw-bold text-white text-uppercase">Start Bootsrap</h1>
+                  <div class="d-flex justify-content-center py-3">
+                      <div><hr></div>
+                      <i class="fa-solid fa-star mx-3 text-white"></i>
+                      <div><hr></div>
+                  </div>
+                  <p class="text-white text-uppercase">Graphic Artist - Wen Designer - Illustrator</p>
+              </div>
+          </div>
+      </div>
 
     <footer></footer>
   </body>
