--- a/index.html
+++ b/index.html
@@ -36,13 +36,48 @@
                   <img class="avatar" src="./img/avatar.svg" alt="">
                   <h1 class="fw-bold text-white text-uppercase">Start Bootsrap</h1>
                   <div class="d-flex justify-content-center py-3">
-                      <div><hr></div>
+                      <div><hr class="color_white"></div>
                       <i class="fa-solid fa-star mx-3 text-white"></i>
-                      <div><hr></div>
+                      <div><hr class="color_white"></div>
                   </div>
                   <p class="text-white text-uppercase">Graphic Artist - Wen Designer - Illustrator</p>
               </div>
           </div>
+      </div>
+      <div class="container-fluid py-5 text-center ">
+          <div class="row d-flex ">
+            <div class="col">
+              <h2 class="fw-bold text-uppercase">Start Bootsrap</h1>
+            </div>
+            <div class="d-flex justify-content-center py-3">
+              <div><hr></div>
+              <i class="fa-solid fa-star mx-3"></i>
+              <div><hr></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row row-cols-1 row-cols-xl-3">
+                <div class="col">
+                  <img class="img-fluid mb-3" src="./img/cabin.png" alt="">
+                </div>
+                <div class="col">
+                  <img class="img-fluid mb-3" src="./img/cake.png" alt="">
+                </div>
+                <div class="col">
+                  <img class="img-fluid mb-3" src="./img/circus.png" alt="">
+                </div>
+                <div class="col">
+                  <img class="img-fluid mb-3" src="./img/game.png" alt="">
+                </div>
+                <div class="col">
+                  <img class="img-fluid mb-3" src="./img/safe.png" alt="">
+                </div>
+                <div class="col">
+                  <img class="img-fluid mb-3" src="./img/submarine.png" alt="">
+                </div>
+            </div>
+        </div>
+
       </div>
 
     <footer></footer>
