about section - not complete

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
+
   <body>
+    <!--HEADER-->
     <header>
+      <!--NAV BAR-->
         <nav class="navbar navbar-expand-lg text-white blue_bg">
+          <!--NAV ITEM-->
           <div class="container">
             <a class="fw-bold text-white" href="">START BOOTSTRAP</a>
             <div id="navbarNav">
@@ -25,16 +29,20 @@
                       <a class="nav-link fw-bold text-white text-uppercase" href="#">Contact</a>
                   </li>
               </ul>
+            </div>
           </div>
         </nav>
     </header>
 
+    <!--MAIN-->
     <main>
-      <div class="container-fluid py-5 green_bg text-center ">
+      <!--USER SECTION WITH AVATAR-->
+      <div class="container-fluid py-5 green_bg text-center">
           <div class="row d-flex ">
               <div class="col">
                   <img class="avatar" src="./img/avatar.svg" alt="">
                   <h1 class="fw-bold text-white text-uppercase">Start Bootsrap</h1>
+                  <!--USER SECTION WITH LINK-->
                   <div class="d-flex justify-content-center py-3">
                       <div><hr class="color_white"></div>
                       <i class="fa-solid fa-star mx-3 text-white"></i>
@@ -44,10 +52,12 @@
               </div>
           </div>
       </div>
-      <div class="container-fluid py-5 text-center ">
+
+      <!--PORTFOLIO-->
+      <div class="container-fluid py-5 text-center">
           <div class="row d-flex ">
             <div class="col">
-              <h2 class="fw-bold text-uppercase">Start Bootsrap</h1>
+              <h2 class="fw-bold text-uppercase">PORTFOLIO</h2>
             </div>
             <div class="d-flex justify-content-center py-3">
               <div><hr></div>
@@ -55,6 +65,7 @@
               <div><hr></div>
             </div>
           </div>
+          <!--PORTFOLIO IMG-->
           <div class="container">
             <div class="row row-cols-1 row-cols-xl-3">
                 <div class="col">
@@ -77,9 +88,30 @@
                 </div>
             </div>
         </div>
-
       </div>
-
+      <div class="container-fluid py-5 green_bg text-center">
+        <div class="row d-flex ">
+          <div class="col">
+            <h2 class="fw-bold text-uppercase text-white">ABOUT</h2>
+            <div class="d-flex justify-content-center py-3">
+              <div><hr class="color_white"></div>
+              <i class="fa-solid fa-star mx-3 text-white"></i>
+              <div><hr class="color_white"></div>
+            </div>
+            <div class="row">
+              <div class="col-6 text-white">prova</div>
+              <div class="col-6 text-white">prova</div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <button type="button" class="btn btn-outline-light"> <i class="fa-solid fa-download text-white"></i> DOWNLOAD</button>
+              </div>
+            </div>
+          </div>
+        </div>
+     </div>
+      </main>
+        
     <footer></footer>
   </body>
 </html>
