about section added text

--- a/index.html
+++ b/index.html
@@ -99,8 +99,12 @@
               <div><hr class="color_white"></div>
             </div>
             <div class="row">
-              <div class="col-6 text-white">prova</div>
-              <div class="col-6 text-white">prova</div>
+              <div class="col-6 text-white">
+                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+              </div>
+              <div class="col-6 text-white">
+                <p>Whether you're a student looking to showcase your work, & professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+              </div>
             </div>
             <div class="row">
               <div class="col-12">
