contact section - not complete

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             </div>
         </div>
       </div>
+      <!--ABOUT SECTION-->
       <div class="container-fluid py-5 green_bg text-center">
         <div class="row d-flex ">
           <div class="col">
@@ -99,6 +100,7 @@
               <div><hr class="color_white"></div>
             </div>
             <div class="row">
+              <!--TESTO DA CORREGGERE E CENTRARE MEGLIO-->
               <div class="col-6 text-white">
                 <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
               </div>
@@ -114,7 +116,20 @@
           </div>
         </div>
      </div>
-      </main>
+    <!--CONTACT SECTION-->
+     <div class="container py-5 text-center">
+      <div class="row d-flex ">
+          <div class="col">
+              <h2 class="fw-bold text-uppercase">CONTACT ME</h2>
+              <div class="d-flex justify-content-center py-3">
+                <div><hr></div>
+                <i class="fa-solid fa-star mx-3"></i>
+                <div><hr></div>
+              </div>
+          </div>
+      </div>
+      </div>
+    </main>
         
     <footer></footer>
   </body>
