--- a/index.html
+++ b/index.html
@@ -117,17 +117,44 @@
         </div>
      </div>
     <!--CONTACT SECTION-->
-     <div class="container py-5 text-center">
-      <div class="row d-flex ">
-          <div class="col">
-              <h2 class="fw-bold text-uppercase">CONTACT ME</h2>
-              <div class="d-flex justify-content-center py-3">
-                <div><hr></div>
-                <i class="fa-solid fa-star mx-3"></i>
-                <div><hr></div>
-              </div>
-          </div>
+      <div class="container py-5 text-center">
+        <div class="row d-flex ">
+            <div class="col">
+                <h2 class="fw-bold text-uppercase">CONTACT ME</h2>
+                <div class="d-flex justify-content-center py-3">
+                  <div><hr></div>
+                  <i class="fa-solid fa-star mx-3"></i>
+                  <div><hr></div>
+                </div>
+            </div>
+        </div>
       </div>
+      <!--FORM-->
+        <div class="container text-start">
+          <form>
+            <!--NOME E COGNOME-->
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Name and Surname</label>
+              <input type="email" class="form-control" id="floatingInput" placeholder="insert name and surname">
+            </div>
+            <!--EMAIL-->
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            </div>
+            <!--CELLULARE-->
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Phone Number</label>
+              <input type="email" class="form-control" id="floatingInput" placeholder="insert +39 followed by your number">
+            </div>
+            <!--MESSAGGIO-->
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Message</label>
+              <textarea name="" id="" cols="100" rows="10"></textarea>
+            </div>
+            <!--BOTTONE SUBMIT-->
+            <button type="button" class="btn btn-success">Send</button>
+          </form>
       </div>
     </main>
         
