--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <!--MESSAGGIO-->
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Message</label>
-              <textarea name="" id="" cols="100" rows="10"></textarea>
+              <textarea name="" id="" cols="20" rows="10" class="form-control" id="floatingInput"></textarea>
             </div>
             <!--BOTTONE SUBMIT-->
             <button type="button" class="btn btn-success">Send</button>
