footer-not complete

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
      </div>
     <!--CONTACT SECTION-->
       <div class="container py-5 text-center">
-        <div class="row d-flex ">
+        <div class="row d-flex">
             <div class="col">
                 <h2 class="fw-bold text-uppercase">CONTACT ME</h2>
                 <div class="d-flex justify-content-center py-3">
@@ -157,7 +157,24 @@
           </form>
       </div>
     </main>
-        
-    <footer></footer>
+    <!--FOOTER-->
+    <footer class="py-5">
+      <div class="container-fluid text-white light_blue_bg py-5">
+        <div class="row d-flex">
+          <div class="col">
+
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container-fluid text-white blue_bg">
+        <div class="row text-center">
+            <div div class="col">
+              <p>Copyright &#169 Your Website 2023</p>
+          </div>
+        </div>    
+      </div>
+    </footer>
   </body>
 </html>
